feat: add new dish page
Added new recipe for Cheese and Potato Flatbrad

--- a/recipes/assassina.html
+++ b/recipes/assassina.html
@@ -10,6 +10,7 @@
     <img
       src="assassina.jpg"
       alt="White rounded plate full of juicy Spaghetti red sauce sprinkled with parmesan and green herbs"
+      width="750" height="500"
     />
     <h2>Description</h2>
     <p>
