--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/assassina.html">Spaghetti all'Assasina</a>
+    <ul>
+      <li><a href="recipes/assassina.html">Spaghetti all'Assasina</a></li>
+      <li>
+        <a href="recipes/cheese_potato_flatbread.html">
+          Cheese and Potato stuffed Flatbread
+        </a>
+      </li>
+    </ul>
   </body>
 </html>
