feat: add new dish page
Added new recipes for Gumbo Soup

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
           Cheese and Potato stuffed Flatbread
         </a>
       </li>
+      <li>
+        <a href="recipes/gumbo_soup.html">Gumbo Soup</a>
+      </li>
     </ul>
   </body>
 </html>
