--- a/recipes/cheese_potato_flatbread.html
+++ b/recipes/cheese_potato_flatbread.html
@@ -29,6 +29,7 @@
       of cheesy potatoes thoughtfully, you’re going to end up with something
       very special.
     </p>
+    <h2>Ingredients</h2>
     <h3>Flatbread Dough:</h3>
     <ul>
       <li>1 cup all-purpose flour</li>
@@ -53,7 +54,7 @@
       <li>1 teaspoon hot chili pepper flakes</li>
       <li>1 tablespoon thinly sliced green onions (optional)</li>
     </ul>
-    <h3>Steps:</h3>
+    <h2>Steps:</h2>
     <ol>
       <li>
         Preheat the oven to 400 degrees F (200 degrees C). Place potatoes in a
