fix: links on index.html
Added target and rel attributes to index page

--- a/index.html
+++ b/index.html
@@ -8,14 +8,32 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="recipes/assassina.html">Spaghetti all'Assasina</a></li>
       <li>
-        <a href="recipes/cheese_potato_flatbread.html">
+        <a
+          href="recipes/assassina.html"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Spaghetti all'Assasina
+        </a>
+      </li>
+      <li>
+        <a
+          href="recipes/cheese_potato_flatbread.html"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           Cheese and Potato stuffed Flatbread
         </a>
       </li>
       <li>
-        <a href="recipes/gumbo_soup.html">Gumbo Soup</a>
+        <a
+          href="recipes/gumbo_soup.html"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Gumbo Soup
+        </a>
       </li>
     </ul>
   </body>
