fix: change css styles
Changed CSS styling: font family, font color on all pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="main-page-list">
       <li>
         <a
           href="recipes/assassina.html"
