--- a/recipes/assassina.html
+++ b/recipes/assassina.html
@@ -3,6 +3,13 @@
   <head lang="en">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Spaghetti all'Assasina</title>
   </head>
   <body>
@@ -10,7 +17,8 @@
     <img
       src="assassina.jpg"
       alt="White rounded plate full of juicy Spaghetti red sauce sprinkled with parmesan and green herbs"
-      width="750" height="500"
+      width="750"
+      height="500"
     />
     <h2>Description</h2>
     <p>
@@ -31,7 +39,7 @@
       heavy hand.
     </p>
     <h2>Ingredients</h2>
-    <h3>Tomato Broth:</h2>
+    <h3>Tomato Broth:</h3>
     <ul>
       <li>1 tablespoon olive oil</li>
       <li>2 cloves garlic, minced</li>
@@ -42,12 +50,39 @@
     <h2>Steps:</h2>
     <ol>
       <li>Gather all ingredients.</li>
-      <li>Heat olive oil in a pot over medium heat. Add garlic and sizzle until it starts to turn golden and fragrant, about 1 minute. Stir in tomato puree, water, and salt. Bring to a simmer on medium-high. Once simmering, reduce to low heat and keep warm.</li>
-      <li>Pour olive oil into a large non-stick skillet over medium-high heat, season with chili flakes and heat until chili flakes start to sizzle, for 1 minute. Add raw spaghetti and toss until well coated with chili oil.</li>
-      <li>Pour in about 3 cups of tomato broth and, using tongs, move pasta from side to side to evenly distribute tomato broth. Cook, occasionally moving pasta from side to side with tongs, all facing the same direction, until most of the broth has been absorbed or evaporated, and the spaghetti starts frying in the pan.</li>
-      <li>Turn spaghetti over with tongs, and evenly arrange in the pan. Keep cooking until the pasta starts to brown, and even lightly chars.</li>
-      <li>Add about 2 more cups of tomato broth, and repeat the process. Continue cooking until the spaghetti is as charred as you like , and cooked to your desired doneness. More broth can be added at the end of the process for a saucier version, as shown in the video, or it can be served relatively dry.</li>
-      <li>Serve with a drizzle of olive oil and more chili flakes if desired.</li>
+      <li>
+        Heat olive oil in a pot over medium heat. Add garlic and sizzle until it
+        starts to turn golden and fragrant, about 1 minute. Stir in tomato
+        puree, water, and salt. Bring to a simmer on medium-high. Once
+        simmering, reduce to low heat and keep warm.
+      </li>
+      <li>
+        Pour olive oil into a large non-stick skillet over medium-high heat,
+        season with chili flakes and heat until chili flakes start to sizzle,
+        for 1 minute. Add raw spaghetti and toss until well coated with chili
+        oil.
+      </li>
+      <li>
+        Pour in about 3 cups of tomato broth and, using tongs, move pasta from
+        side to side to evenly distribute tomato broth. Cook, occasionally
+        moving pasta from side to side with tongs, all facing the same
+        direction, until most of the broth has been absorbed or evaporated, and
+        the spaghetti starts frying in the pan.
+      </li>
+      <li>
+        Turn spaghetti over with tongs, and evenly arrange in the pan. Keep
+        cooking until the pasta starts to brown, and even lightly chars.
+      </li>
+      <li>
+        Add about 2 more cups of tomato broth, and repeat the process. Continue
+        cooking until the spaghetti is as charred as you like , and cooked to
+        your desired doneness. More broth can be added at the end of the process
+        for a saucier version, as shown in the video, or it can be served
+        relatively dry.
+      </li>
+      <li>
+        Serve with a drizzle of olive oil and more chili flakes if desired.
+      </li>
       <li>Enjoy!</li>
     </ol>
   </body>
